--- a/package.json
+++ b/package.json
@@ -9,5 +9,7 @@
   "dependencies": {
     "axios": "^0.19.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "^2.0.5"
+  }
 }
